nexus-collections/tests/ui/cannot_hold_multiple_cursor_guards.stderr
error[E0499]: cannot borrow `cursor` as mutable more than once at a time
  --> tests/ui/cannot_hold_multiple_cursor_guards.rs:25:18
   |
21 |     let guard1 = cursor.next().unwrap();
   |                  ------ first mutable borrow occurs here
...
25 |     let guard2 = cursor.next().unwrap();
   |                  ^^^^^^ second mutable borrow occurs here
...
28 |     let _ = guard1.read(|x| *x);
   |             ------ first borrow later used here
